[package]
authors = ["Kornel <kornel@geekhood.net>"]
categories = ["multimedia::video", "command-line-utilities"]
description = "pngquant-based GIF maker for nice-looking animGIFs"
documentation = "https://docs.rs/gifski"
homepage = "https://gif.ski"
include = ["/README.md", "/Cargo.toml", "/src/**/*.rs", "/src/bin/*.rs"]
keywords = ["gif", "encoder", "converter", "maker", "gifquant"]
license = "AGPL-3.0+"
name = "gifskilite"
readme = "README.md"
repository = "https://github.com/jamsinclair/gifski-lite"
version = "1.6.4"
autobins = false
edition = "2018"

[dependencies]
gif = "0.11.3"
gif-dispose = "3.1.1"
imagequant = "4.0.0-beta.7"
imgref = "1.9.1"
resize = "0.7.2"
rgb = "0.8.31"
natord = "1.0.9"
png = "0.17.2"
quick-error = "2.0.1"
crossbeam-channel = "0.5.2"
rayon = "1.2.0"
log = "0.4.14"

[lib]
path = "src/lib.rs"
crate-type = ["lib", "staticlib", "cdylib"]

[[bin]]
name = "main"

[profile.dev]
debug = 1
opt-level = 1

[profile.dev.package.'*']
opt-level = 2
debug = false

[profile.release]
panic = "abort"
lto = true
debug = false
opt-level = 3

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
