[package]
authors = ["Kornel <kornel@geekhood.net>", "Jamie <jamsinclairnz@gmail.com>"]
categories = ["multimedia::video", "wasm"]
description = "pngquant-based GIF maker for nice-looking animGIFs that supports WASM."
documentation = "https://github.com/jamsinclair/gifski-lite#readme"
homepage = "https://github.com/jamsinclair/gifski-lite"
include = ["/README.md", "/Cargo.toml", "/src/**/*.rs"]
keywords = ["gif", "encoder", "converter", "wasm", "gifquant"]
license = "AGPL-3.0+"
name = "gifski-lite"
readme = "README.md"
repository = "https://github.com/jamsinclair/gifski-lite"
version = "1.0.1"
autobins = false
edition = "2018"

[dependencies]
gif = "0.11.3"
gif-dispose = "3.1.1"
imagequant = { version = "=4.0.0-beta.8", default_features = false }
imgref = "1.9.1"
resize = "0.7.2"
rgb = "0.8.31"
natord = "1.0.9"
png = "0.17.13"
quick-error = "2.0.1"
crossbeam-channel = "0.5"

[dev-dependencies]
lodepng = "3.5.2"

[lib]
path = "src/lib.rs"
crate-type = ["lib", "staticlib", "cdylib"]

[profile.dev]
debug = 1
opt-level = 1

[profile.dev.package.'*']
opt-level = 2
debug = false

[profile.release]
panic = "abort"
lto = true
debug = false
opt-level = 3

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
