[package]
authors = ["Kornel <kornel@geekhood.net>"]
categories = ["multimedia::video", "command-line-utilities"]
description = "pngquant-based GIF maker for nice-looking animGIFs"
documentation = "https://docs.rs/gifski"
homepage = "https://gif.ski"
include = ["/README.md", "/Cargo.toml", "/src/**/*.rs", "/src/bin/*.rs"]
keywords = ["gif", "encoder", "converter", "maker", "gifquant"]
license = "AGPL-3.0-or-later"
name = "gifski"
readme = "README.md"
repository = "https://github.com/ImageOptim/gifski"
version = "1.32.0"
autobins = false
edition = "2021"
rust-version = "1.74"

[dependencies]
clap = { version = "4.5.4", features = ["cargo"], optional = true }
imgref = "1.10.1"
gif = { version = "0.13.1", default-features = false, features = ["std", "raii_no_panic"] }
gif-dispose = "5.0.0"
imagequant = "4.3.0"
pbr = { version = "1.1.1", optional = true }
resize = { version = "0.8.3", features = ["rayon"] }
rgb = "0.8.37"
wild = { version = "2.2.0", optional = true, features = ["glob-quoted-on-windows"] }
natord = { version = "1.0.9", optional = true }
quick-error = "2.0.1"
dunce = { version = "1.0.4", optional = true }
crossbeam-channel = "0.5.11"
loop9 = "0.1.5"
crossbeam-utils = "0.8.19"
ordered-channel = { version = "1.1.0", features = ["crossbeam-channel"] }

[dependencies.rayon]
optional = true
version = "1.10.0"

[dev-dependencies]
lodepng = "3.10.1"

[features]
parallel = ["rayon"]

[lib]
path = "src/lib.rs"
crate-type = ["lib", "staticlib", "cdylib"]

[profile.dev]
debug = 1
opt-level = 1

[profile.dev.package.'*']
opt-level = 2
debug = false

[profile.release]
panic = "abort"
lto = true
debug = false
opt-level = 3
strip = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
